test to fix header spacing

--- a/css/main.css
+++ b/css/main.css
@@ -52,8 +52,6 @@ hr.small {
 }
 @media only screen and (min-width: 768px) {
   .main-content {
-    padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
     padding-top: 130px;
   }
 }
